attempt to fix scrubbing on mobile

--- a/src/components/audio-player/AudioPlayer.css
+++ b/src/components/audio-player/AudioPlayer.css
@@ -15,6 +15,10 @@
   border-radius: 0.75rem;
 }
 
+.player > button * {
+  pointer-events:none;
+}
+
 .player > button:focus {
   border: 1px solid #fff;
 }
